@@ -1420,7 +1420,7 @@
 	"utilityMultipleUpdate": "Utilità - Modifica massiva schede",
 	"value": "Valore",
 	"version": "Versione",
-	"view": "Visualizza",
+	"view": "Vista",
 	"viewDetails": "Visualizza dettagli",
 	"viewEmail": "Visualizza e-mail",
 	"viewPointDistance": "Distanza punto di vista",
